# one_colsilidated_app

./: .env  ADVANCED_FEATURES.md  CODEBASE_GAPS_ANALYSIS.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_ANALYSIS_SUMMARY.md  GAPS_SUMMARY_TABLE.md  IMPROVEMENTS.md  MONETIZATION_ANALYSIS.md  MONETIZATION_EXECUTIVE_SUMMARY.md  MONETIZATION_IMPLEMENTATION_CHECKLIST.md  MONETIZATION_QUICK_REFERENCE.txt  PROJECT_STRUCTURE_ANALYSIS.md  QUICK_START.md  README.md  SERVICE_HEALTH_GUIDE.md  SERVICE_SPECIFIC_GAPS.md  auto-recover.sh  docker-compose.yml  setup-and-start.sh  smart-start.sh  start.sh  status.sh  stop.sh  verify-health.sh  wait-for-deps.sh
.claude/: settings.local.json
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/deployment/: prometheus.yml
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/docs/: AGENTS.md  LOCAL_LLM_VERIFICATION.md  MULTI_AGENT_SYSTEM.md  PRODUCTION_DEPLOYMENT.md
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/examples/: agent_workflow_legacy_analysis.py  automation_workflow_example.py  complete_use_case.md  digital_transformation_onboarding.py  legacy_migration_example.py
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/scripts/: setup_local_llms.py  setup_local_llms.sh
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/src/: __init__.py  main.py
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/src/agents/: __init__.py  change_agent.py  citizen_dev_agent.py  debt_agent.py  discovery_agent.py  framework.py  lowcode_agent.py  models.py  modernization_agent.py  onboarding_agent.py  process_mining_agent.py  quality_agent.py  security_agent.py
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/src/api/: __init__.py
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/src/automation_fabric/: __init__.py  engine.py  models.py
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/src/company_brain/: __init__.py  models.py
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/src/core/: config.py  database.py  llm.py  logger.py
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/src/document_os/: __init__.py  models.py
Legacy-Systems-Manual-Processes-in-Enterprises/Legacy-Systems-Manual-Processes-in-Enterprises/tests/: __init__.py  test_automation_fabric.py  test_legacy_migrator.py
data_analysis/: README.md  main.py  (+2 more)
(+1731 files in other folders)
